# text-praline

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  changelog.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: research_log.md
examples/: observation-examples.ipynb
examples/output/: docu_astro_cleaned.txt  docu_astro_extracted.txt
rag_testing/: build_eval_dataset.py  evaluate_praline_light.py  evaluate_praline_light_simple.py  rag_testing.ipynb
rag_testing/datasets/: generated_qa.jsonl  rag_eval_dataset.csv  rag_eval_dataset.xlsx  removed_debug.jsonl
rag_testing/datasets/light_experiment_simple/: detailed_results.csv  light_improvements.json  raw_wins_r1.json  summary_results.csv  top1_chunks.json
tests/: basic_test.py  test_header_footer.py  test_line_decisions.py  test_pdf.py  test_praline_light.py  test_praline_report.py  test_structure_mode.py
textpraline/: __init__.py
textpraline/cleaner/: clean.py  mappings.py
